# OTUS_CPP_Professional_HomeWork_02

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: ip_filter.hpp
source/: ip_filter.cpp  main.cpp
tests/: test_ip_filter_gtest.cpp
